src/Test/Fixtures/Good/Arrays/zeroLengthI64ArrayDeclaration.lf
let ints : [i64; 0] = [];
