src/Test/Fixtures/Bad/Arrays/missingRepeatedValueBeforeSemicolon.lf
let xs : [i32; 3] = [; 3];